--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <a href="https://www.youtube.com/watch?v=1ZPVNLgLvVI" class="nav-link">Видео.</a>
         </nav>
         <main class="content">
-            <p>Сайт создан 13.06.2023. Сайт основан на информации из нескольких сайтов. Все факты <a href="https://stopgame.ru/blogs/topic/23704/50_interesnyh_faktov_kotoryh_vy_ne_znali" class="link"> здесь,</a> а картинка <a href="https://1gai.ru/publ/526512-50-neobychnyh-faktov-iz-50-raznyh-stran-mira.html" class="link">здесь. Последнее обновление сайта: 01.08.2023.</a></p>
+            <p>Сайт создан 13.06.2023. Сайт основан на информации из нескольких сайтов. Все факты <a href="https://stopgame.ru/blogs/topic/23704/50_interesnyh_faktov_kotoryh_vy_ne_znali" class="link"> здесь,</a> а картинка <a href="https://1gai.ru/publ/526512-50-neobychnyh-faktov-iz-50-raznyh-stran-mira.html" class="link">здесь.</a>Последнее обновление сайта: 01.08.2023.</p>
         </main>
         <footer class="footer">
             <p>2023, copyright, все права не защищены.</p>
