--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>20 Фактов</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="yandex-verification" content="f571f3e53c8e32fd" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function(m, e, t, r, i, k, a) {
