--- a/index.html
+++ b/index.html
@@ -5,35 +5,19 @@
     <meta charset="utf-8">
     <title>20 Фактов</title>
     <link rel="stylesheet" href="css/style.css">
-    <meta name="yandex-verification" content="f571f3e53c8e32fd" />
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m, e, t, r, i, k, a) {
-            m[i] = m[i] || function() {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            for (var j = 0; j < document.scripts.length; j++) {
-                if (document.scripts[j].src === r) {
-                    return;
-                }
-            }
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YL3SXX4D9E"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-        ym(94687851, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true
-        });
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YL3SXX4D9E');
 
     </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/94687851" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-</head>
 
 <body>
     <div class="page">
