--- a/answer.html
+++ b/answer.html
@@ -6,7 +6,7 @@
     <title>20 Фактов</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JG2WHWX6D0"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YL3SXX4D9E"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -15,7 +15,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-JG2WHWX6D0');
+        gtag('config', 'G-YL3SXX4D9E');
 
     </script>
 </head>
