--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>20 Фактов</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YL3SXX4D9E"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MG9B7HBNCZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-YL3SXX4D9E');
+      gtag('config', 'G-MG9B7HBNCZ');
     </script>
 </head>
 
